accordion alterado, lista de mangás retornada

--- a/esporte.html
+++ b/esporte.html
@@ -55,6 +55,11 @@
             .mgImg{
                 margin: 1%;
             }
+
+            .linha{
+                width: 98%;
+                margin-left: 1%;
+            }
         </style>
 </head>
 <body>
@@ -105,39 +110,39 @@
         <!-- Inicio container ListGroup-->
 
         <div class="container cont-Bv rounded-3 mb-3">
-            <div class="row">
-                <div class="col">
-                    <h1 class="text-left">Âncoras</h1><hr>
-                </div>
-            </div>
-            <ul class="list-group list-group-flush">
-  <li class="list-group-item"><a href="#aa">Ao Ashi</a></li>
-  <li class="list-group-item"><a href="#bl">Blue Lock</a></li>
-  <li class="list-group-item"><a href="#ct">Captain Tsubasa</a></li>
-  <li class="list-group-item"><a href="#h">Haikyuu</a></li>
-  <li class="list-group-item"><a href="#hni">Hajime no Ippo</a></li>
-  <li class="list-group-item"><a href="#knb">Kuroko no Basket</a></li>
-  <li class="list-group-item"><a href="#pot">Prince of Tennis</a></li>
-  <li class="list-group-item"><a href="#r">Real</a></li>
-  <li class="list-group-item"><a href="#sd">Slam Dunk</a></li>
-  <li class="list-group-item"><a href="#yp">Yowamushi Pedal</a></li>
-</ul>
+            <div class="accordion accordion-flush" id="accordionFlushExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+        <h1>Âncoras</h1>
+      </button>
+    </h2>
+    <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body"> <ul class="list-group list-group-flush">
+              <li class="list-group-item"><a href="#aa">Ao Ashi</a></li>
+              <li class="list-group-item"><a href="#bl">Blue Lock</a></li>
+              <li class="list-group-item"><a href="#ct">Captain Tsubasa</a></li>
+              <li class="list-group-item"><a href="#h">Haikyuu</a></li>
+              <li class="list-group-item"><a href="#hni">Hajime no Ippo</a></li>
+              <li class="list-group-item"><a href="#knb">Kuroko no Basket</a></li>
+              <li class="list-group-item"><a href="#pot">Prince of Tennis</a></li>
+              <li class="list-group-item"><a href="#r">Real</a></li>
+              <li class="list-group-item"><a href="#sd">Slam Dunk</a></li>
+              <li class="list-group-item"><a href="#yp">Yowamushi Pedal</a></li>
+            </ul>
+        </div>
+    </div>
+  </div>
+</div>
+            
 
         </div>
         <!-- Fim container ListGroup-->
 
         <!-- Inicio container mangás-->
 
-<div class="container cont-Mg rounded-3 mb-3 p-2">
-    <div class="accordion accordion-flush" id="accordionFlushExample">
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#primeiro" aria-expanded="false" aria-controls="flush-collapseOne" id="aa">
-            Ao Ashi
-          </button>
-        </h2>
-        <div id="primeiro" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body"><div class="row">
+<div class="container cont-Bv rounded-3 mb-3 p-2">
+    <div class="row">
                 <div class="col-sm-12 col-md-4  mgImg">
                     <img src="Imagens/esporte/aa.jpg" class="tamanhoImg" alt="Ao Ashi">
                 </div>
@@ -146,18 +151,9 @@
                     <h6>342 Capitulos</h6><br>
                     <p>Ashito Aoi, um estudante do terceiro ano do ensino médio de Ehime, conhece Fukuda Tatsuya, um treinador da “J Youth League”. Mesmo que ainda tenha uma personalidade forte, Ashito tem um incrível potêncial que o fez ser convidado pelo treinador Fukuda para participar da seleção de sua equipe em Tóquio. A história do garoto que vai revolucionar o futebol no Japão vai começar.</p>
                 </div>
+                <hr class="linha">
             </div>
-        </div>
-        </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#segundo" aria-expanded="false" aria-controls="flush-collapseTwo" id="bl">
-            Blue Lock
-          </button>
-        </h2>
-        <div id="segundo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body" > <div class="row">
+    <div class="row">
                 <div class="col-sm-12 col-md-4  mgImg">
                     <img src="Imagens/esporte/bl.jpg" class="tamanhoImg" alt="Blue Lock">
                 </div>
@@ -166,18 +162,9 @@
                     <h6>236 Capitulos</h6><br>
                     <p>Yoichi Isagi perdeu a oportunidade de ir para o campeonato nacional do ensino médio porque ele passou para seu companheiro de equipe que perdeu em vez de chutar para o gol si mesmo. Isagi é um dos 300 atacantes de Sub-18 escolhidos por Jinpachi Ego, contratado pela Associação de Futebol do Japão após a Copa do Mundo de 2018, para guiar o Japão na conquista da Copa do Mundo ao destruir o futebol japonês. O plano de Ego é isolar os 300 atacantes em uma instituição parecida com uma prisão chamada “Blue Lock”, para criar o maior “egoista” / atacante do mundo, que tem faltado no futebol japonês.</p>
                 </div>
+                <hr class="linha">
             </div>
-        </div>
-        </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#terceiro" aria-expanded="false" aria-controls="flush-collapseThree" id="ct">
-            Captain Tsubasa
-          </button>
-        </h2>
-        <div id="terceiro" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body"><div class="row">
+    <div class="row">
                 <div class="col-sm-12 col-md-4  mgImg">
                     <img src="Imagens/esporte/ct.jpg" class="tamanhoImg" alt="Captain Tsubasa">
                 </div>
@@ -186,18 +173,9 @@
                     <h6>146 Capitulos</h6><br>
                     <p>Rising Sun vai girar em torno de Tsubasa, como ele pretende participar nos Jogos Olímpicos como um representante do Japão.</p>
                 </div>
+                <hr class="linha">
             </div>
-        </div>
-        </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#quarto" aria-expanded="false" aria-controls="flush-collapseOne" id="h">
-            Haikyuu
-          </button>
-        </h2>
-        <div id="quarto" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body"><div class="row">
+    <div class="row">
                 <div class="col-sm-12 col-md-4  mgImg">
                     <img src="Imagens/esporte/h.jpg" class="tamanhoImg" alt="Haikyuu">
                 </div>
@@ -206,18 +184,9 @@
                     <h6>404 Capitulos</h6><br>
                     <p>Hinata Shouyou, ao ver uma partida de voleibol, fica fascinado com "o Pequeno Gigante", um habilidoso jogador de vôlei, decidindo-se junta-se clube de vôlei de sua escola, no entanto ele é o único membro do clube. Após 3 anos ele finalmente completar o time e ruma para a disputa do Torneio de Primavera. No entanto seu primeiro oponente de cara é o preferido das finais. É neste momento que ocorre o encontro de Hinata com Kageyama Tobio, o "Rei da Quadra"!!!</p>
                 </div>
+                <hr class="linha">
             </div>
-        </div>
-        </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#quinto" aria-expanded="false" aria-controls="flush-collapseOne" id="hni">
-            Hajime no Ippo
-          </button>
-        </h2>
-        <div id="quinto" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body"><div class="row">
+    <div class="row">
                 <div class="col-sm-12 col-md-4  mgImg">
                     <img src="Imagens/esporte/hni.jpg" class="tamanhoImg" alt="Hajime no Ippo">
                 </div>
@@ -228,18 +197,9 @@
 
                     Lá, Takamura empresta alguns vídeos com lutas de boxe para encorajá-lo um pouco. Depois de ver os vídeos, Ippo começa a se interessar em boxe, pois ele se convenceu de que nele poderia encontrar a resposta que procurava desde criança, que era “qual o significa de ser forte?” Ippo acaba convencendo Takamura e o treinador Kamogawa, provando que é capaz de se tornar um boxeador com a sua determinação e esforço.</p>
                 </div>
+                <hr class="linha">
             </div>
-        </div>
-        </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sexto" aria-expanded="false" aria-controls="flush-collapseOne" id="knb">
-            Kuroko no Basket
-          </button>
-        </h2>
-        <div id="sexto" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body"><div class="row">
+    <div class="row">
                 <div class="col-sm-12 col-md-4  mgImg">
                     <img src="Imagens/esporte/knb.jpg" class="tamanhoImg" alt="Kuroko no Basket">
                 </div>
@@ -248,18 +208,9 @@
                     <h6>276 Capitulos</h6><br>
                     <p>Um time de basquete ginasial do Colégio Teikou se destacou vencendo diversos campeonatos. Os jogadores titulares daquele time ficaram conhecidos como ?A Geração dos Milagres?. Cada um deles transferiu-se para um colégio diferente no ensino médio. Entretanto, existia um rumor sobre a existência de um sexto jogador reconhecido pelos outros cinco como superior, o sexto jogador fantasma: Tetsuya Kuroko.</p>
                 </div>
+                <hr class="linha">
             </div>
-        </div>
-        </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#setimo" aria-expanded="false" aria-controls="flush-collapseOne" id="pot">
-            Prince of Tennis
-          </button>
-        </h2>
-        <div id="setimo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body"><div class="row">
+    <div class="row">
                 <div class="col-sm-12 col-md-4  mgImg">
                     <img src="Imagens/esporte/pot.jpg" class="tamanhoImg" alt="Prince of Tennis">
                 </div>
@@ -268,18 +219,9 @@
                     <h6>216 Capitulos</h6><br>
                     <p>A história se passa em Tokyo, focado na Seishun Gakuen (青春学園), mais comumente chamado de Seigaku, uma escola particular conhecida, principalmente, pelo seu clube de tênis e dos jogadores talentosos. A história inicia-se quando um aluno chamado Echizen Ryoma se transfere para essa escola e começa a se destacar por suas habilidades no esporte ao derrotar diversos veteranos rapidamente. Na estrada para alcançar seu sonho de ganhar o Torneio Nacional de Tênis das Escolas Secundárias, os titulares do time do Seigaku, com seu mais novo membro, Echizen Ryoma, fazem novas amizades e aprendem diversas técnicas complexas. Relacionados:</p>
                 </div>
+                <hr class="linha">
             </div>
-        </div>
-        </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#oitavo" aria-expanded="false" aria-controls="flush-collapseOne" id="r">
-            Real
-          </button>
-        </h2>
-        <div id="oitavo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body"><div class="row">
+    <div class="row">
                 <div class="col-sm-12 col-md-4  mgImg">
                     <img src="Imagens/esporte/r.jpg" class="tamanhoImg" alt="Real">
                 </div>
@@ -290,18 +232,9 @@
 
                     REAL também lida com a realidade das deficiências físicas e psicológicas na luta contra as inferioridades dos personagens, mostrando a tentativa de romper suas próprias barreiras psicológicas pouco a pouco. Enquanto o basquete é o maior tema de REAL, uma maior ênfase é colocada no desenvolvimento dos personagens – Takehiko Inoue explora o passado dos personagens, seu mundo interior, e suas tentativas de conseguir algo na vida.</p>
                 </div>
+                <hr class="linha">
             </div>
-        </div>
-        </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#nono" aria-expanded="false" aria-controls="flush-collapseOne" id="sd">
-            Slam Dunk
-          </button>
-        </h2>
-        <div id="nono" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body"><div class="row">
+    <div class="row">
                 <div class="col-sm-12 col-md-4  mgImg">
                     <img src="Imagens/esporte/sd.jpg" class="tamanhoImg" alt="Slam Dunk">
                 </div>
@@ -312,18 +245,9 @@
 
                     Hanamichi Sakuragi não tem jogo com garotas – absolutamente nenhum! Não ajuda que ele seja conhecido por derrubar a qualquer momento e sempre sair por cima. Um brigão sem esperança, ele foi rejeitado por 50 garotas seguidas! Tudo isso muda quando ele conhece a garota dos seus sonhos, Haruko, e ela na verdade não tem medo dele! Quando ela o apresenta ao jogo de basquete, sua vida muda para sempre…</p>
                 </div>
+                <hr class="linha">
             </div>
-        </div>
-        </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#decimo" aria-expanded="false" aria-controls="flush-collapseOne" id="yp">
-            Yowamushi Pedal
-          </button>
-        </h2>
-        <div id="decimo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body"><div class="row">
+    <div class="row">
                 <div class="col-sm-12 col-md-4  mgImg">
                     <img src="Imagens/esporte/yp.jpg" class="tamanhoImg" alt="Yowamushi Pedal">
                 </div>
@@ -333,11 +257,7 @@
                     <p>O otaku Sakamichi Onoda acaba de entrar na escola e tem planos de entrar para o clube de anime. No ensino médio, Onoda não tinha nenhum amigo com quem pudesse falar sobre anime, jogos, Akihabara e outras coisas de otaku, e ele está esperando que ele possa fazer tais amigos no clube de animes, mas ele descobre que ela foi dissolvida. A fim de restabelecer o clube que ele tenta encontrar quatro outras pessoas que gostariam de participar. Desde que ele era um garotinho, Onoda montou sua mamachari – uma bicicleta volumosa com um quadro diferenciado usado principalmente para passeios curtos, como para diversão casual ou para pegar mantimentos – para ir para Akihabara toda semana para conferir ou comprar coisas otaku. O calouro Fellow Shunsuke Imaizumi e ciclista, durante o treinamento, nota-se um menino ( Onoda ) montando sua mamchari em uma estrada íngreme. Freshman e corrida ciclista de estrada, Shokichi Naruko visita Akihabara para obter alguns modelos de Gundam de plástico para seus irmãos mais novos e atende Onoda que chama sua atenção por causa da sua habilidade de bicicleta na mamachari e depois de descobrir que eles vão para a mesma escola. Mais tarde, ambos Naruko e Imaizumi tentam convencê-lo a se juntar ao clube de corrida de bicicleta, mas ele vai aceitar?</p>
                 </div>
             </div>
-        </div>
-        </div>
-      </div>
 </div>
-        </div>
         <!-- Fim container mangás-->
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
