--- a/acao.html
+++ b/acao.html
@@ -79,7 +79,7 @@
                                 </ul>
                             </li>
                             <li class="nav-item rounded-3 me-3 navButtons">
-                                <a class="nav-link" aria-current="page" href="Contato_mangapedia.html">Contato</a>
+                                <a class="nav-link" aria-current="page" href="contato.html">Contato</a>
                             </li>
                             <li class="nav-item dropdown rounded-3 me-3 navButtons">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
